--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,6 @@
+body{
+  font-family: Arial, Helvetica, sans-serif;
+}
 form.signup,
 form.login {
   margin-top: 50px;
@@ -8,7 +11,8 @@ form.login {
 .collapse-content .fa.fa-share-alt:hover {
   color: #0d47a1 !important;
 }
-.card1 {
+.card1, 
+.card2{
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   width: 40%;
@@ -21,16 +25,13 @@ form.login {
 .container {
   padding: 2px 16px;
 }
-.card2 {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 40%;
-}
+.diet{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  text-align: center;
 
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-.container {
-  padding: 2px 16px;
+};
+navbar{
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
